# acer-profile-rs

./: .gitignore  Cargo.toml  PKGBUILD  README.md  acer-profile.install  install.sh
.github/workflows/: ci.yml  release.yml
config/: profiles.toml
distros/: post-install.sh  post-remove.sh  post-upgrade.sh  pre-remove.sh
docs/: PROFILY-TESTOVANI.md
legacy-python/: install.sh  phase1-revert.sh  phase1-setup.sh  phase1-verify.sh  phase2-measure.sh  probe-pl2.sh  pyproject.toml
legacy-python/acer_profile/: __init__.py  cli.py  controller.py  daemon.py  levers.py  profiles.py
legacy-python/config/: profiles.toml
legacy-python/systemd/: acer-profile.service
src/: controller.rs  daemon.rs  dbus.rs  levers.rs  main.rs  measure.rs  probe.rs  profiles.rs
systemd/: acer-profile.service
